ajustado documentação dos mapas
